[aliases]
make = sdist bdist_wheel

[metadata]
name = wheel-inspect
#version = # Set in setup.py
description = Extract information from wheels
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = wheel-inspect@varonathe.org
license = MIT
license_file = LICENSE
url = https://github.com/jwodder/wheel-inspect

keywords =
    packages
    pep427
    wheel

classifiers =
    Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Software Distribution

project_urls =
    Source Code = https://github.com/jwodder/wheel-inspect
    Bug Tracker = https://github.com/jwodder/wheel-inspect/issues
    Say Thanks! = https://saythanks.io/to/jwodder

[options]
packages = find:
python_requires = ~=3.4
install_requires =
    attrs             ~= 18.1
    headerparser      ~= 0.3.0
    packaging         >= 17.1
    property-manager  ~= 2.3
    readme_renderer   ~= 24.0
    # Needed for pkg_resources:
    setuptools        >= 36

[options.entry_points]
console_scripts =
    wheel2json = wheel_inspect.__main__:main
