[metadata]
name = wheel-inspect
version = attr:wheel_inspect.__version__
description = Extract information from wheels
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = wheel-inspect@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/wheelodex/wheel-inspect

keywords =
    *.dist-info
    dist-info
    package metadata
    packages
    pep427
    wheel

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Software Distribution
    Typing :: Typed

project_urls =
    Source Code = https://github.com/wheelodex/wheel-inspect
    Bug Tracker = https://github.com/wheelodex/wheel-inspect/issues

[options]
packages = find:
package_dir=
    =src
python_requires = ~=3.7
install_requires =
    attrs            >= 18.1
    cached-property  ~= 1.5; python_version < "3.8"
    entry-points-txt ~= 0.1.0
    headerparser     ~= 0.4.0
    packaging        >= 17.1
    readme_renderer  >= 24.0
    wheel-filename   ~= 1.1

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    wheel2json = wheel_inspect.__main__:main

[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
ignore_missing_imports = True
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
